--- a/style.css
+++ b/style.css
@@ -4,17 +4,23 @@
 
 * {
     font-family: 'Dosis', sans-serif;
-    color: white;
 }
 
-p {
-    color: black;
+h1 {
+    color: white;
+    font-size: 3em;
+}
+
+html {
+    width: 100%;
+    min-height: 100%;
 }
 
 body {
-    min-height: 100%;
-    width: 100%;
+    min-height: 100vh;
+    width: 100vw;
     background: var(--gradient);
+    margin: 0;
 }
 
 #contentDiv {
@@ -35,6 +41,10 @@ input {
 
 input:focus {
     outline: none;
+}
+
+#roomContainer > * {
+    display: block;
 }
 
 #room {
@@ -59,19 +69,23 @@ input:focus {
     width: 80%;
     margin-left: 50%;
     transform: translateX(-50%);
-    margin-bottom: 15px;
 }
 
 #sendIcon {
-    width: 15px;
-    height: 15px;
+    width: 20px;
+    height: 20px;
     position: absolute;
-    right: 0;
+    right: 10%;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#iconPlacer {
+    position: relative;
 }
 
 #inputContainer {
-    position: relative;
-    min-width: 10px;
+    margin-bottom: 15px;
 }
 
 .messageBlob {
